<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!--Application Major Lables-->
    <string name="app_name">MathMobile</string>
    <string name="action_settings">Settings</string>
    <string name="game_name_label">MathMobile</string>

    <!--Main Menu Button Labels-->
    <string name="new_game_label">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>


    <!-- About Content -->
    <string name="about_content">
        Math Fun is a basic mathematical brain training game.The complexity of the arithmetic expression will increase based on the selected difficulty level.You will be given 10 seconds to complete one question and marks at the end of the game.
        You can give the answer only using Integers.
        \n \n
        Note : If you turn on Hints you will be given four attempts per question and application will popup a hint according to the answer.
    </string>

    <!-- Difficaulty Levels Labels -->
    <string name="novice_label">Novice</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="guru_label">Guru</string>

    <!-- Preference Menu Labels -->
    <string name="settings_label">Settings</string>
    <string name="settings_title">Math Fun Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>

    <!-- Main Grid Button Labels -->
    <string name="val0">0</string>
    <string name="val1">1</string>
    <string name="val2">2</string>
    <string name="val3">3</string>
    <string name="val4">4</string>
    <string name="val5">5</string>
    <string name="val6">6</string>
    <string name="val7">7</string>
    <string name="val8">8</string>
    <string name="val9">9</string>
    <string name="valDel">DEL</string>
    <string name="valEntr">#</string>
    <string name="valMinus">-</string>

    <!-- Guess Label -->
    <string name="guess">Guess </string>

    <!-- Time Remaining Label -->
    <string name="time_remain">Time Remaining : </string>



</resources>
