<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/math_fun_layout_style"
              tools:context=".MathBrain" >

    <TextView
            android:id="@+id/header"
            style="@style/header_style"
            android:text="@string/game_name_label"/>

    <Button
            android:id="@+id/new_game_button"
            style="@style/button_style1"
            android:text="@string/new_game_label"/>

    <Button
            android:id="@+id/continue_button"
            style="@style/button_style1"
            android:text="@string/continue_game"/>

    <Button
            android:id="@+id/about_button"
            style="@style/button_style1"
            android:text="@string/about_label" />

    <Button
            android:id="@+id/exit_button"
            style="@style/button_style1"
            android:text="@string/exit_label" />

</LinearLayout>
